--- a/mkdocs/site/concepts/flows/index.html
+++ b/mkdocs/site/concepts/flows/index.html
@@ -1478,7 +1478,7 @@
 <h4 id="definitions">Definitions</h4>
 <p>All flows use an action property to designate what the flow is doing and how it will affect an economic resource (or not).  Actions are defined as follows.</p>
 <ul>
-<li>vf:produce - new resource created in that process or an existing stock resource of the same type added to</li>
+<li>vf:produce - new resource created in that process or an addition to an existing stock resource of the same type</li>
 <li>vf:use - for example a tool used in process; after the process, the tool still exists, but during the process, the tool is unavailable</li>
 <li>vf:consume - for example an ingredient or component used up or transformed into the output, after the process the input is gone</li>
 <li>vf:cite - for example a design file, neither used nor consumed, the file remains available at all times</li>
@@ -1487,7 +1487,7 @@
 <li>vf:dropoff -  transported resource or person leaves the process; the same resource or person appeared in input with <em>vf:pickup</em></li>
 <li>vf:accept - input to processes like repair or modification or testing, the same resource will appear in output with <em>vf:modify</em></li>
 <li>vf:modify - output of processes like repair or modification or testing, the same resource will appear in input with <em>vf:accept</em></li>
-<li>vf:combine - put a resource in a package or combination resource; the same resource will appear later with <em>vf:separate</em></li>
+<li>vf:combine - put a resource in a package or combination resource; the same resource might appear later with <em>vf:separate</em></li>
 <li>vf:separate - remove a resource from a package or combination resource; the same resource appeared as input with <em>vf:combine</em></li>
 <li>vf:deliver-service - new service produced and delivered (a service implies that an agent actively receives the service)</li>
 <li>vf:transfer-all-rights - give full (in the human realm) rights and responsibilities to another agent, without transferring physical custody</li>
